Fix class name of Font Awesome

--- a/_teams/index.html
+++ b/_teams/index.html
@@ -15,9 +15,8 @@ header:
     <h2 class="archive__item-title" itemprop="headline">
       {% capture i_url %}{{ name | slugify: 'pretty' | prepend: '/teams/' | append: '/' }}{% endcapture %}
       <a href="{{ i_url | relative_url }}" rel="permalink">
-        <span class="fa-stack fa-lg fa-fw">
-          <i class="fa fa-square fa-stack-2x" style="color: {{ team.color.code }}"></i>
-          <i class="fa fa-life-ring fa-stack-1x{% if team.color.inverse %} fa-inverse{% endif %}"></i>
+        <span class="fa-lg fa-fw">
+          <i class="fas fa-car{% if team.color.inverse %} fa-inverse{% endif %}" style="background: {{ team.color.code }};"></i>
         </span>
         {{ team.ja_short_name | default: team.ja_name }}
       </a>
@@ -25,7 +24,7 @@ header:
     <p class="archive__item-excerpt" itemprop="description">
       <ul class="fa-ul">
         {% for driver in team.drivers %}
-          <li><i class="fa-li fa fa-user-circle-o" aria-hidden="true"></i>{{ driver }}</li>
+          <li><i class="fa-li fa fa-user-circle" aria-hidden="true"></i>{{ driver }}</li>
         {% endfor %}
       </ul>
     </p>
