Add comment to drivers index

--- a/_drivers/index.html
+++ b/_drivers/index.html
@@ -6,6 +6,39 @@ header:
   overlay_image: /assets/images/drivers_idx.jpg
 ---
 
+<div class="notice--info">
+  <p>
+    RSR Grand Prix 2017 シーズンは現状で20人のドライバーがグリッドに並ぶ予定となっているが、rFactor 2 による開催2年目となる今季も激しい戦いが待っていそうだ。
+  </p>
+  <p>
+    栄光のカーナンバー1を付ける昨季王者 Luthien Remillia は復帰2年目でまだ開発途上のルノーのステアリングを握ることとなった。
+    未だに GP で勝利のないルノーチームに初優勝をもたらすと共に前人未踏のシーズン連覇並びに4度目の王者獲得を狙う。
+    チームメイトはレッドブルより加入する2年目の ren53、今季は上位進出なるだろうか。
+  </p>
+  <p>
+    ドライバーズチャンピオン2連覇中のメルセデスには、Remillia に最終戦で逆転を許し無念のランキング2位となった AiM が電撃移籍。
+    もう1台にも過去2度の王者である GTC-F が加入するなど、ドライバーズチャンピオン3連覇並びにコンストラクターズチャンピオン奪還に向け盤石の体制を敷いてきている。
+  </p>
+  <p>
+    一方、打倒メルセデスの最右翼と目されているレッドブルとフェラーリはドライバー陣を一新。
+    レッドブルにはメルセデスより移籍のベテラン Lybius と一昨季のスポット参戦経験のある mizu312 が加入、経験と速さの両面を備えたコンビとなりそうだ。
+    フェラーリはルーキーの BlueBlack14 と2年目の Hayata Asaga というフレッシュな組み合わせで不振からの脱却を計りたい。
+  </p>
+  <p>
+    中団グループの雄フォース・インディアには 2014 シーズン以来の復帰となる satoruko と昨季非力なマノーで光る走りを幾度と見せた sucrose のコンビで
+    AiM の抜けた穴をどこまでカバー出来るかが注目される。
+    マノーのもう1台を駆っていた Yuto Dutchin はウィリアムズへ移籍、チームメイトは昨季のルーキーオブザイヤー ODIMON となり双方ともにさらなる飛躍が期待される。
+  </p>
+    昨季のコンストラクターズチャンピオンであるマクラーレンはランキング4位の Harmonia が残留し、チームメイトには2年目の konkon が移籍してきた。
+    一方、過去2年 Harmonia とコンビを組んできたランキング3位の nori21 は古巣トロ・ロッソへ 2012 シーズン以来の復帰を果たし、
+    姉妹チームより加入する昨季大躍進を遂げた ninneko と共に近年不振に喘ぐチームの立て直しを図ることとなりそうだ。
+  </p>
+  <p>
+    その他にはハースに残留する knosu は昨季2戦レッドブルより代役参戦した NARU、
+    SHR に残留する復帰2年目の Happa はフォース・インディアより移籍の sikeindy とそれぞれ新しいコンビを組み新シーズンを迎えることになる。
+  </p>
+</div>
+
 <div class="grid__wrapper">
 
 {% for h_item in site.data.drivers %}
